    AMQPReader.read_shortstr() in serialization.py, the default
    value of 'utf-8' gives the same behavior as before.

    Big speedup for sending large messages.  For example, sending
    a single 100MB message on my machine goes from 90 seconds to
    around 0.6 seconds.

    Use setuptools if available, for enhanced functionality
    for packagers.


Version 0.6.1

    One minor change to watch out for is that low-level errors
    such as a closed connection now appear as IOExceptions
    instead of

        TypeError: 'NoneType' object is not iterable

    which never really explained anything.

    Fix potential problem with library getting stuck in a loop
    if the peer closed the socket.  Also, break a few more references
    when closing Connections and Channels, to help garbage collection.
    Thanks for majek04@... for pointing these out.

    Add support for using Connection and Channel objects as context
    managers for 'with' statements (available in Python >= 2.5), so you
    can write code like:

        with Connection() as conn:
            with conn.channel() as ch:
                # do stuff with ch and conn

    and have the Channel and Connection objects closed automatically
    when the blocks exit.


Version 0.6

    Very large rearrangement of code, breaking the large client_0_8.py
    module into submodules based on the various layers of the AMQP protocol.
    The public API is unchanged however, so existing code that uses amqplib
    should be unaffected.

    ----

    nb_client_0_8.py and demos/nbdemo_receive.py were removed because of
    the major changes to the main client to lay the groundwork for future
    non-blocking behaviors (see http://hg.barryp.org/py-amqplib-devel/ )

    ----

    More unittests added.

Version 0.5

    Get rid of Python 2.5-style conditional expressions, for
    compatibility with Python 2.4  Thanks to Alexey Timanovsky
    for pointing this out.
